@@ -1,5 +1,5 @@
-<!ENTITY version         "SVN-20130514">
-<!ENTITY releasedate     "May 14, 2013">
+<!ENTITY version         "SVN-20130515">
+<!ENTITY releasedate     "May 15, 2013">
 <!ENTITY copyrightdate   "1999-2013"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone       "7.4">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
